2020-01-31  Juan J. merelo  <jmerelo@penny>

	* generate_nginx_config.py: Eliminates wrong directive (used for test purposes) for X-Frame-Options. Change also WRONG SERVER in X-Powered-By
	(generate): Change the number of worker processes to speed up spidering.

	* zap.py: The page spider has been moved to the module startup, eliminating the need to spider the site every single time. This should speed up things, and is the first change for GECCO.

2020-01-27  JJMerelo  <jmerelo@bojack>

	* zap.py (zap_test): Reduce sleep time all over.

	* genetic.py (selection_and_reproduction): Changes tournament size to 2

2020-01-26  Juan J. merelo  <jmerelo@penny>

	* genetic.py: Tests 4 for tournament size and 32 for generations.
